--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,24 +1,32 @@
 name: Playwright Tests
+
 on:
   push:
     branches: [main, master]
   pull_request:
     branches: [main, master]
+
 jobs:
   test:
     timeout-minutes: 60
     runs-on: windows-latest
+
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Install dependencies
-        run: npm ci --force
+        run: npm ci
+
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps --force
+        run: npx playwright install --force
+
       - name: Run Playwright tests
         run: npx playwright test --project=chromium
+
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
