changed setting files

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -33,3 +33,11 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
+        
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-results
+          path: test-results/
+          retention-days: 30
