--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,7 +25,8 @@ jobs:
         run: npx playwright install --force
 
       - name: Run Playwright tests
-        npx playwright test --project=chromium
+       - name: Run Playwright tests
+        run: npx playwright test --project=chromium --workers=2
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
