modify download test

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@playwright/test": "^1.57.0",
     "@types/node": "^25.0.3",
     "eslint": "^9.39.2",
+    "openapi-typescript": "^7.13.0",
+    "playwright-ajv-schema-validator": "^1.0.2",
     "typescript-eslint": "^8.52.0"
   }
 }
