Fix typo in UI test section of README
Signed-off-by: yossie0128-stack <yossie.0128@gmail.com>

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,11 +18,20 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Cache node_modules
+        uses: actions/cache@v4
+        with:
+        cache: 'npm'
+
+      - name: Cache Playwright Browsers
+        id: playwright-cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('package-lock.json') }}
 
       - name: Install Playwright Browsers
-        run: npx playwright install --force
+        run: npx playwright install --with-deps chromium 
 
       - name: Run Playwright tests
         run: npx playwright test --project=chromium --workers=1
