changed: .github/workflows/playwright.yml

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,6 +19,9 @@ jobs:
           node-version: 20
           cache: 'npm'
 
+      - name: Install dependencies
+        run: npm ci
+
       - name: Cache Playwright Browsers
         id: playwright-cache
         uses: actions/cache@v4
