--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,5 +1,4 @@
 name: Playwright Tests
-
 on:
   push:
     branches: [main, master]
@@ -9,22 +8,22 @@ on:
 jobs:
   test:
     timeout-minutes: 10
-    runs-on: ubuntu-latest
-    
-    # 公式イメージをタグ付きで指定（Node.jsとブラウザが同梱されています）
-    container:
-      image: ://mcr.microsoft.com
-
+    runs-on: ubuntu-latest  # コンテナ指定（container:）を消しました
     steps:
       - uses: actions/checkout@v4
 
-      # コンテナにNode.jsが含まれているため setup-node は不要ですが、
-      # npmキャッシュを利用したい場合のみ残します（今回はシンプルにするため省略可能）
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
       - name: Install dependencies
         run: npm ci
 
-      # 公式イメージにはブラウザが入っているため install chromium は不要です
-      # 依存関係が不足している場合のみ install-deps を実行しますが、通常は不要です
+      # ここでブラウザと必要なシステムライブラリをインストール
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium
+
       - name: Run Playwright tests
         run: npx playwright test --project=chromium --workers=1
 
@@ -33,11 +32,4 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 30
-
-      - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
-        with:
-          name: playwright-results
-          path: test-results/
           retention-days: 30
