changed into  stable setting.

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -21,8 +21,8 @@ jobs:
         run: npm ci
 
       # ここでブラウザと必要なシステムライブラリをインストール
-  #    - name: Install Playwright Browsers
- #       run: npx playwright install --with-deps chromium
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps chromium
 
       - name: Run Playwright tests
         run: npx playwright test --project=chromium --workers=1
